<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jcodee.mod1class3.MainActivity">

    <!-- Permite que la pantalla pueda tener un scroll -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <!-- inputType para seleccionar que teclado se va a utilizar -->
            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="text" />

            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion"
                android:inputType="text"
                android:maxLines="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descuento" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- En la propiedad layout_weight se le asigna el peso o porcentaje que va abarcar
                 en la pantalla con respecto al contenedor -->
                <RadioButton
                    android:id="@+id/rbSi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="center_horizontal"
                    android:text="@string/si" />

                <RadioButton
                    android:id="@+id/rbNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:checked="true"
                    android:gravity="center_horizontal"
                    android:text="@string/no" />
            </RadioGroup>

            <EditText
                android:id="@+id/etPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precio"
                android:inputType="number" />

            <!-- layout_gravity es para mover el contenedor
             gravity es para mover el contenido del contenedor -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGrabar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grabar" />

                <Button
                    android:id="@+id/btnListar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
